--- a/home-assistant/packages/sopfeu.yaml
+++ b/home-assistant/packages/sopfeu.yaml
@@ -82,7 +82,7 @@ template:
           {% elif  is_state('sensor.sopfeu_risque_d_incendie_actuel', '5') %}
              Extrême
           {% else %}
-             Indisponible
+             Aucun
           {% endif %}
         attributes:
           attribution: Données fournies par la SOPFEU
@@ -98,7 +98,7 @@ template:
             {% elif  is_state('sensor.sopfeu_risque_d_incendie_actuel', '5') %}
                Risque d’incendie de cimes de fortes intensité, qui se propage à grande vitesse et qui peut devenir incontrôlable, évitez de faire des feux.
             {% else %}
-               Indisponible
+               Aucun
             {% endif %}
 
       - name: "SOPFEU Risque d'incendie demain"
@@ -124,7 +124,7 @@ template:
           {% elif  is_state('sensor.sopfeu_risque_d_incendie_demain', '5') %}
              Extrême
           {% else %}
-             Indisponible
+             Aucun
           {% endif %}
         attributes:
           attribution: Données fournies par la SOPFEU
@@ -140,8 +140,16 @@ template:
             {% elif  is_state('sensor.sopfeu_risque_d_incendie_demain', '5') %}
                Risque d’incendie de cimes de fortes intensité, qui se propage à grande vitesse et qui peut devenir incontrôlable, évitez de faire des feux.
             {% else %}
-               Indisponible
+               Aucun
             {% endif %}
+
+      - name: "SOPFEU Risque d'incendie après-demain"
+        unique_id: sopfeu_risque_##ZDR##_after_tomorrow
+        icon: mdi:fire-alert
+        state: >
+          {{ state_attr('sensor.sopfeu_risque_d_incendie_data', 'riskAfterTomorrow') }}
+        attributes:
+          attribution: Données fournies par la SOPFEU
 
       - name: "SOPFEU Risque d'incendie après-demain texte"
         unique_id: sopfeu_risque_##ZDR##_after_tomorrow_text
@@ -158,7 +166,7 @@ template:
           {% elif  is_state('sensor.sopfeu_risque_d_incendie_apres_demain', '5') %}
              Extrême
           {% else %}
-             Indisponible
+             Aucun
           {% endif %}
         attributes:
           attribution: Données fournies par la SOPFEU
@@ -174,16 +182,8 @@ template:
             {% elif  is_state('sensor.sopfeu_risque_d_incendie_apres_demain', '5') %}
                Risque d’incendie de cimes de fortes intensité, qui se propage à grande vitesse et qui peut devenir incontrôlable, évitez de faire des feux.
             {% else %}
-               Indisponible
+               Aucun
             {% endif %}
-
-      - name: "SOPFEU Risque d'incendie après-demain"
-        unique_id: sopfeu_risque_##ZDR##_after_tomorrow
-        icon: mdi:fire-alert
-        state: >
-          {{ state_attr('sensor.sopfeu_risque_d_incendie_data', 'riskAfterTomorrow') }}
-        attributes:
-          attribution: Données fournies par la SOPFEU
 
       - name: "SOPFEU Feux actifs au Québec"
         unique_id: sopfeu_feux_actifs_total
